...
            <Button
              colors={["#ffffff"]}
              fontColor="rgb(255, 255, 255)"
              buttonAction={() => navigate("/login")}
              icons={["/assets/logIn-icon.png"]}
            >
              Zaloguj się
            </Button>
            <Button
              colors={["rgb(33,33,43)"]}
              fontColor="rgb(255, 255, 255)"
              buttonAction={loginByGuest}
              icons={["/assets/guest-icon.png"]}
            >
              Kontynuuj jako gość
            </Button>
          </div>
        </div>
      </div>
    </div>
  );
...
