...
            shadowOpacity: 0.25,
            shadowRadius: 4,
            elevation: 5,
            flexDirection: 'row'
          }}>
            <Text style={{fontSize: 32, textAlign: 'center', width: '7.5%'}}>🎉</Text>
            <Text style={{fontSize: 22, textAlign: 'center', width: '85%'}}>Nauczyłeś się juz wszystkiego! Zacznij teraz od nowa!</Text>
            <Text style={{fontSize: 32, textAlign: 'center', width: '7.5%'}}>🎉</Text>
          </View>
        </View>
      </TouchableOpacity>
    </Modal>
    <SafeAreaView style={styles.mainContainer}>
...
        flashcards?.fiches_translations.map((item, index )=> {
          const isFirst = index == 0;
          const dragHandlers = isFirst ? panResponder.panHandlers : {};

          return (
           <Flashcard
             testID={`swipeable-flashcard`}
             key={index}
             foreignTranslation={item.translations.foreignTranslation}
             polishTranslation={item.translations.polishTranslation}
             isFirst={isFirst}
             swipe={swipe}
             titlSign={titlSign}
...
